--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -2,20 +2,20 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: fastapi-canary-demo
+  labels:
+    app: fastapi-canary-demo
 spec:
-  replicas: 2
+  replicas: 4
   selector:
     matchLabels:
       app: fastapi-canary-demo
-      harness.io/track: stable
   template:
     metadata:
       labels:
         app: fastapi-canary-demo
-        harness.io/track: stable
     spec:
       containers:
-        - name: fastapi-canary-demo
-          image: ganesh243/fastapi-canary-demo:latest
-          ports:
-            - containerPort: 80
+      - name: fastapi-container
+        image: ganesh243/fastapi-canary-demo:latest
+        ports:
+        - containerPort: 80
